--- a/merrrcadito/package.json
+++ b/merrrcadito/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "bootstrap-icons": "^1.13.1",
+    "chart.js": "^4.5.1",
     "next": "^15.5.4",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
