--- a/merrrcadito/tsconfig.json
+++ b/merrrcadito/tsconfig.json
@@ -20,6 +20,7 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
+      "@/Utils/*": ["./src/Utils/*"],
       "@/Components/*": ["src/Components/*"]
     }
   },
