--- a/merrrcadito/package.json
+++ b/merrrcadito/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.5.1",
+    "dotenv": "^17.2.3",
     "next": "^15.5.4",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.1",
